SE-24: Fix email screen extra padding

--- a/scss/civicrm/search/pages/_send-email.scss
+++ b/scss/civicrm/search/pages/_send-email.scss
@@ -12,10 +12,6 @@
     }
   }
 
-  .crm-contactEmail-form-block {
-    padding: 0 20px;
-  }
-
   .crm-block > .crm-submit-buttons
   .crm-block > .form-layout-compressed {
     td.label {
